employment and eduaction add/edit/update completed

--- a/mytime-ui/src/app/admin/components/employees/employee/employees-details.component.html
+++ b/mytime-ui/src/app/admin/components/employees/employee/employees-details.component.html
@@ -394,10 +394,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card mb-5">
                         <!-- Edit Form -->
                         <app-employees-education-list [employeeId]="employeeId">
                         </app-employees-education-list>
+                    </div>
+                    <div class="card mb-5">
+                        <!-- Edit Form -->
+                        <app-employees-employement-list [employeeId]="employeeId">
+                        </app-employees-employement-list>
                     </div>
                 </div>
             </div>
